# grpc-graphql-playground

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  PLAN.md  README.md  docker-compose.yml  go.mod  start-from-here-grpc-graphql.md
.claude/: README.md  settings.json
.claude/agents/: team.md
.claude/skills/proto-gen/: SKILL.md
.claude/skills/run-tests/: SKILL.md
.claude/skills/validate-compose/: SKILL.md  validate-compose.py  validate-compose.sh
.github/workflows/: build.yml  test.yml
frontend/: codegen.ts  next.config.js  package.json  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: DestinationCard.tsx
frontend/tests/: components.test.tsx
frontend/tests/e2e/: recommendations.spec.ts
graphql/: Dockerfile  gqlgen.yml  schema.graphql
graphql/cmd/graphql/: main.go
graphql/config/: config.go
graphql/graph/: models.go  resolver.go  resolver_test.go  schema.go
recommender/: Dockerfile  buf.gen.yaml  buf.yaml  pyproject.toml  recommender.proto
recommender/app/: __init__.py
recommender/app/config/: settings.py
recommender/app/db/: models.py  session.py
recommender/app/entry/: __init__.py  main.py  start.sh  sync.py
recommender/app/services/: recommender.py
recommender/client/: client.go  client_test.go
recommender/tests/: test_integration.py  test_kafka_consumer.py  test_recommender.py
